
5.06  2014-06-11
  - Improved redirect_to to behave more like url_for.

5.05  2014-06-08
  - Fixed parsing of header fields with single character names in
    Mojo::Headers. (crab)

5.04  2014-06-03
  - Added expect_close attribute to Mojo::Content.
  - Improved support for broken responses to CONNECT requests.

5.03  2014-06-02
  - Fixed bug where Mojo::DOM::HTML could not handle certain broken tags.

5.02  2014-05-31
  - Added multi-name support to cookie and signed_cookie methods in
    Mojolicious::Controller.
  - Added multi-name support to cookie and upload methods in Mojo::Message.
  - Improved Mojolicious::Command::generate::plugin to use better directory
    names.
  - Fixed bug where Mojo::DOM::HTML could not handle tags with lots of
    attributes.

5.01  2014-05-30
  - Fixed continuation line handling in Mojo::Headers.

5.0  2014-05-29
  - Code name "Tiger Face", this is a major release.
  - Changed heuristics for number detection in Mojo::JSON to better line up
    with user expectations.
  - Changed lock and unlock callbacks in Mojo::IOLoop to not receive an
    invocant.
  - Changed return value of path_for method in Mojolicious::Routes::Match.
  - Changed return value and arguments of error method in Mojo::Message.
  - Removed deprecated support for "X-Forwarded-HTTPS".
  - Removed return values from wait method in Mojo::IOLoop::Delay.
  - Removed list context support from header method in Mojo::Headers.
  - Removed generate_port method from Mojo::IOLoop.
  - Replaced reserved stash value partial with render_to_string method.
  - Replaced format method in Mojo::Log with an attribute.
  - Replaced check_file method in Mojo::Server::Morbo with check method.
  - Added with_compression method to Mojo::Transaction::WebSocket.
  - Added catch method to Mojo::EventEmitter.
  - Added append method to Mojo::Log.
  - Updated jQuery to version 2.1.1.
  - Improved Mojo::IOLoop::Delay to automatically check if the event loop is
    already running.