@@ -1,6 +1,8 @@
 
 5.06  2014-06-11
   - Improved redirect_to to behave more like url_for.
+  - Fixed bug in Mojo::UserAgent where HTTP/1.0 connections were sometimes
+    kept alive.
 
 5.05  2014-06-08
   - Fixed parsing of header fields with single character names in
